--- a/services.html
+++ b/services.html
@@ -3,49 +3,43 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-
-.column1 {
-  width: 220px;
-  margin-bottom: 16px;
-  align-self: center;
-  margin-top: 100px;
-  padding: 0 8px;
-}
-
-
-
-.slayer1 {
+.card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
 }
 
-.desc1 {
-  padding: 0 16px;
+.price {
+  color: grey;
+  font-size: 22px;
 }
 
-.desc1::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
 }
   
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
 .topnav {
   overflow: hidden;
   background-color: #333;
 }
-
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -54,17 +48,14 @@ body {
   text-decoration: none;
   font-size: 17px;
 }
-
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
-
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
 }
-
 </style>
 </head>
 <body>
@@ -78,42 +69,17 @@ body {
 
 <div style="padding-left:16px">
   <h1> Services </h1> 
-  <br>
   <h3> The following are the various carry services we provide. You may find the available carries, their prices, requirements, and other information here. </h3>
-  </div>
-  <br>
   
-  
-  <div class="column1">
-    <div class="slayer1">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-      <div class="desc1">
-        <h2>test</h2>
-        <p>description</p>
-      </div>
-  </div>
+  <div class="card">
+  <img src="/w3images/jeans3.jpg" alt="Denim Jeans" style="width:100%">
+  <h1>Tailored Jeans</h1>
+  <p class="price">$19.99</p>
+  <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+  <p><button>Add to Cart</button></p>
   </div>
   
-  <div class="column1">
-    <div class="slayer1">
-      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
-      <div class="desc1">
-        <h2>test</h2>
-        <p>description</p>
-      </div>
-    </div>
-  </div>
-  
-  <div class="column1">
-    <div class="slayer1">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
-      <div class="desc1">
-        <h2>test</h2>
-        <p>description</p>
-      </div>
-    </div>
-  </div>
-
+</div>
 
 </body>
 </html>
