--- a/services.html
+++ b/services.html
@@ -56,6 +56,20 @@ body {
   background-color: #04AA6D;
   color: white;
 }
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: blue; 
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px grey;
+}
 </style>
 </head>
 <body>
@@ -72,9 +86,9 @@ body {
   <h3> The following are the various carry services we provide. You may find the available carries, their prices, requirements, and other information here. </h3>
   
   <div class="card">
-  <img src="/w3images/jeans3.jpg" alt="Denim Jeans" style="width:100%">
-  <h1>Tailored Jeans</h1>
-  <p class="price">$19.99</p> 
+  <img src="/w3images/jeans3.jpg" alt="Bonzo" style="width:100%">
+  <h1>Floor 1</h1>
+  <p class="price">100k normal | 90k bulk</p> 
   <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
   </div>
   
