--- a/discord.html
+++ b/discord.html
@@ -31,6 +31,19 @@ body {
   background-color: #04AA6D;
   color: white;
 }
+  
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: blue; 
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px grey;
+}
 </style>
 </head>
 <body>
