--- a/services.html
+++ b/services.html
@@ -38,33 +38,30 @@ body {
 }
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #2d2de5;
 }
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #ffffff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #2a2ad7;
 }
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #16537e;
   color: white;
 }
 ::-webkit-scrollbar {
   width: 12px;
 }
-
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
   border-radius: 10px;
 }
- 
 ::-webkit-scrollbar-thumb {
   background: blue; 
   border-radius: 10px;
