--- a/home.html
+++ b/home.html
@@ -7,43 +7,49 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+<style>
+  html {
+  overflow-y: overlay;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  }
+  head {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  }
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #2d2de5;
 }
-
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #ffffff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
-
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #2a2ad7;
 }
-
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #16537e;
   color: white;
 }
-
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 10px;
 }
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
+  box-shadow: inset 0 0 2px grey; 
+  border-radius: 15px;
+  background: white;
 }
 ::-webkit-scrollbar-thumb {
-  background: blue; 
-  border-radius: 10px;
-  box-shadow: inset 0 0 5px grey;
+  background: #2d2de5; 
+  border-radius: 15px;
+  box-shadow: inset 0px 0px 3px lightblue;
 }
+</style>
 </style>
 </head>
 <body>
