--- a/todo.html
+++ b/todo.html
@@ -48,9 +48,9 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="https://25hoursaday.github.io/skyflare/home.html">Home</a>
+  <a href="https://25hoursaday.github.io/skyflare/home.html">Home</a>
   <a href="https://25hoursaday.github.io/skyflare/services.html">Services</a>
-  <a href="https://25hoursaday.github.io/skyflare/todo.html">To Do</a>
+  <a class="active" href="https://25hoursaday.github.io/skyflare/todo.html">To Do</a>
   <a href="https://25hoursaday.github.io/skyflare/discord.html">Discord</a>
 </div>
 
