--- a/services.html
+++ b/services.html
@@ -85,15 +85,58 @@
   <p class="price">100k normal | 90k bulk</p> 
   <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
   </div>
+  
   <div class="card" id="f2">
   <img src="/w3images/jeans3.jpg" alt="scarf" style="width:100%">
   <h1>Floor 2</h1>
   <p class="price">100k normal | 90k bulk</p> 
   <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
   </div>  
+
+  <div class="card" id="f3">
+  <img src="/w3images/jeans3.jpg" alt="scarf" style="width:100%">
+  <h1>Floor 3</h1>
+  <p class="price">100k normal | 90k bulk</p> 
+  <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
   </div>
-  <script>
+  
+  <div class="card" id="f4">
+  <img src="/w3images/jeans3.jpg" alt="scarf" style="width:100%">
+  <h1>Floor 4</h1>
+  <p class="price">100k normal | 90k bulk</p> 
+  <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+  </div>
+  
+  <div class="card" id="f5">
+  <img src="/w3images/jeans3.jpg" alt="scarf" style="width:100%">
+  <h1>Floor 5</h1>
+  <p class="price">100k normal | 90k bulk</p> 
+  <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+  </div>
+  
+  <div class="card" id="f6">
+  <img src="/w3images/jeans3.jpg" alt="scarf" style="width:100%">
+  <h1>Floor 6</h1>
+  <p class="price">100k normal | 90k bulk</p> 
+  <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+  </div>
+  
+  <div class="card" id="f7">
+  <img src="/w3images/jeans3.jpg" alt="scarf" style="width:100%">
+  <h1>Floor 7</h1>
+  <p class="price">100k normal | 90k bulk</p> 
+  <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+  </div>
+  
+  </div>
+  <script> 
     document.getElementById("f2").style.marginLeft = "25%";
+    document.getElementById("f3").style.marginLeft = "50%";
+    document.getElementById("f4").style.marginLeft = "75%";
+    
+    document.getElementById("f5").style.marginLeft = "auto";
+    document.getElementById("f6").style.marginLeft = "25%";
+    document.getElementById("f7").style.marginLeft = "50%";
   </script>
 </body>
 </html>
